force-app/main/default/objects/Fund_Lineup_Change__c/Fund_Lineup_Change__c.object-meta.xml
<CustomObject>
    <description>Used for documentation and tracking Fund Lineup changes.</description>
    <label>Fund Lineup Change</label>
    <nameField>
        <label>Fund List Change Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fund Lineup Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>