force-app/main/default/objects/Fund_Lineup_Change__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that Plan and Fund Lineup Change is associated with.</description>
    <inlineHelpText>Account that Plan and Fund Lineup Change is associated with.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fund Lineup Changes</relationshipLabel>
    <relationshipName>Fund_Lineup_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>