force-app/main/default/objects/Fund_Lineup_Change__c/fields/Are_Funds_Being_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Are_Funds_Being_Deleted__c</fullName>
    <label>Are Funds Being Deleted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>