force-app/main/default/objects/Fund_Lineup_Change__c/fields/Asset_Fees_Removed__c.field-meta.xml
<CustomField>
    <fullName>Asset_Fees_Removed__c</fullName>
    <description>Date Asset Manager Fees are removed in Paradigm Plan Fees area (if applicable)</description>
    <inlineHelpText>Date Asset Manager Fees are removed in Paradigm Plan Fees area (if applicable)</inlineHelpText>
    <label>Asset Fees Removed</label>
    <type>Date</type>
</CustomField>