force-app/main/default/objects/Fund_Lineup_Change__c/fields/Asset_Manager_Removed__c.field-meta.xml
<CustomField>
    <fullName>Asset_Manager_Removed__c</fullName>
    <description>Date Asset Manager is removed in Paradigm (if applicable)</description>
    <inlineHelpText>Date Asset Manager is removed in Paradigm (if applicable)</inlineHelpText>
    <label>Asset Manager Removed</label>
    <type>Date</type>
</CustomField>