force-app/main/default/objects/Fund_Lineup_Change__c/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <description>Notes on Client billing</description>
    <inlineHelpText>Notes on Client billing</inlineHelpText>
    <label>Billing Notes</label>
    <type>TextArea</type>
</CustomField>