force-app/main/default/objects/Fund_Lineup_Change__c/fields/Blackout_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Blackout_End_Date__c</fullName>
    <description>End date for Blackout notices</description>
    <inlineHelpText>End date for Blackout notices</inlineHelpText>
    <label>Blackout End Date</label>
    <type>Date</type>
</CustomField>