force-app/main/default/objects/Fund_Lineup_Change__c/fields/Blackout_Notice_Needed__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Notice_Needed__c</fullName>
    <description>Is Blackout notice needed for this Fund change?</description>
    <inlineHelpText>Is Blackout notice needed for this Fund change?</inlineHelpText>
    <label>Blackout Notice Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>