force-app/main/default/objects/Fund_Lineup_Change__c/fields/Blackout_Noticed_Received__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Noticed_Received__c</fullName>
    <description>Date Blackout Notice is Received.</description>
    <inlineHelpText>Date Blackout Notice is Received.</inlineHelpText>
    <label>Blackout Noticed Received</label>
    <type>Date</type>
</CustomField>