force-app/main/default/objects/Fund_Lineup_Change__c/fields/Blackout_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Start_Date__c</fullName>
    <description>Start date for Blackout notices</description>
    <inlineHelpText>Start date for Blackout notices</inlineHelpText>
    <label>Blackout Start Date</label>
    <type>Date</type>
</CustomField>