force-app/main/default/objects/Fund_Lineup_Change__c/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <formula>TEXT(Plan__r.Custodian__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custodian</label>
    <type>Text</type>
</CustomField>