force-app/main/default/objects/Fund_Lineup_Change__c/fields/Custom_List_Attached__c.field-meta.xml
<CustomField>
    <fullName>Custom_List_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If fund list = Custom or Other, check box once the detailed custom list is attached via &apos;Files&apos;</description>
    <inlineHelpText>If fund list = Custom or Other, check box once the detailed custom list is attached via &apos;Files&apos;</inlineHelpText>
    <label>Custom List Attached</label>
    <type>Checkbox</type>
</CustomField>