force-app/main/default/objects/Fund_Lineup_Change__c/fields/Custom_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_List_Name__c</fullName>
    <description>Name of Custom Fund List in Paradigm (if applicable)</description>
    <inlineHelpText>Name of Custom Fund List in Paradigm (if applicable)</inlineHelpText>
    <label>Custom List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>