force-app/main/default/objects/Fund_Lineup_Change__c/fields/Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested__c</fullName>
    <description>Date Fund Lineup change was requested</description>
    <inlineHelpText>Date Fund Lineup change was requested</inlineHelpText>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>