force-app/main/default/objects/Fund_Lineup_Change__c/fields/Default_Investment__c.field-meta.xml
<CustomField>
    <fullName>Default_Investment__c</fullName>
    <description>Default investment used for forfeitures</description>
    <inlineHelpText>Default investment used for forfeitures</inlineHelpText>
    <label>Default Investment</label>
    <length>6</length>
    <type>Text</type>
</CustomField>