force-app/main/default/objects/Fund_Lineup_Change__c/fields/Fee_Disclosure_Updated__c.field-meta.xml
<CustomField>
    <fullName>Fee_Disclosure_Updated__c</fullName>
    <description>Date Fee Disclosure is updated.</description>
    <inlineHelpText>Date Fee Disclosure is updated.</inlineHelpText>
    <label>Fee Disclosure Updated</label>
    <type>Date</type>
</CustomField>