force-app/main/default/objects/Fund_Lineup_Change__c/fields/Fund_Change_Description__c.field-meta.xml
<CustomField>
    <fullName>Fund_Change_Description__c</fullName>
    <label>Fund Change Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>