force-app/main/default/objects/Fund_Lineup_Change__c/fields/Fund_Lineup_Change__c.field-meta.xml
<CustomField>
    <fullName>Fund_Lineup_Change__c</fullName>
    <description>What is the reason for the Fund Lineup Change?</description>
    <inlineHelpText>What is the reason for the Fund Lineup Change?</inlineHelpText>
    <label>Fund Lineup Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Asset Manager</fullName>
            </value>
            <value>
                <fullName>Advisor/Partner Request</fullName>
            </value>
            <value>
                <fullName>Asset Manager Change</fullName>
            </value>
            <value>
                <fullName>Asset Manager Removal</fullName>
            </value>
            <value>
                <fullName>Custodian Change</fullName>
            </value>
            <value>
                <fullName>Money Market Reform</fullName>
            </value>
            <value>
                <fullName>Promotional Campaign</fullName>
            </value>
            <value>
                <fullName>Sponsor/Trustee Request</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>