force-app/main/default/objects/Fund_Lineup_Change__c/fields/Fund_Lineup_Change_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Fund_Lineup_Change_Completion_Date__c</fullName>
    <description>Date Fund Lineup Change is Complete.</description>
    <inlineHelpText>Date Fund Lineup Change is Complete.</inlineHelpText>
    <label>Fund Lineup Change Completion Date</label>
    <type>Date</type>
</CustomField>