force-app/main/default/objects/Fund_Lineup_Change__c/fields/Fund_Lineup_Change_Status__c.field-meta.xml
<CustomField>
    <fullName>Fund_Lineup_Change_Status__c</fullName>
    <description>Status used to track progress of fund lineup change process.</description>
    <inlineHelpText>Status used to track progress of fund lineup change process.</inlineHelpText>
    <label>Fund Lineup Change Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Requested</fullName>
                <default>true</default>
                <label>Change Requested</label>
            </value>
            <value>
                <fullName>Blackout Notice Received</fullName>
            </value>
            <value>
                <fullName>In Blackout</fullName>
            </value>
            <value>
                <fullName>Blackout Ended</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Stalled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>