force-app/main/default/objects/Fund_Lineup_Change__c/fields/Fund_Lineup_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Fund_Lineup_Change_Type__c</fullName>
    <description>What type of Fund Lineup Change is this?</description>
    <inlineHelpText>What type of Fund Lineup Change is this?</inlineHelpText>
    <label>Fund Lineup Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>