force-app/main/default/objects/Fund_Lineup_Change__c/fields/Fund_Mapping_Attached__c.field-meta.xml
<CustomField>
    <fullName>Fund_Mapping_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If prior funds are mapping to new funds, check this box once detailed mapping instructions are attached via &quot;Files&quot;</description>
    <inlineHelpText>If prior funds are mapping to new funds, check this box once detailed mapping instructions are attached via &quot;Files&quot;</inlineHelpText>
    <label>Fund Mapping Attached</label>
    <type>Checkbox</type>
</CustomField>