force-app/main/default/objects/Fund_Lineup_Change__c/fields/In_Blackout__c.field-meta.xml
<CustomField>
    <fullName>In_Blackout__c</fullName>
    <description>Verifies if today is between start and end of blackout period for open fund lineup changes.   Related Flow uses this checkbox daily to change fund lineup status to &quot;In Blackout&quot;</description>
    <formula>Blackout_Start_Date__c &lt;= TODAY()
&amp;&amp;
Blackout_End_Date__c &gt; TODAY()
&amp;&amp;
NOT( ISPICKVAL( Fund_Lineup_Change_Status__c , &quot;Completed&quot;))</formula>
    <inlineHelpText>Verifies if today is between start and end of blackout period for open fund lineup changes.   Related Flow uses this checkbox daily to change fund lineup status to &quot;In Blackout&quot;</inlineHelpText>
    <label>In Blackout</label>
    <type>Checkbox</type>
</CustomField>