force-app/main/default/objects/Fund_Lineup_Change__c/fields/Notices_Required__c.field-meta.xml
<CustomField>
    <fullName>Notices_Required__c</fullName>
    <description>Notices required for this type of Fund Lineup Change</description>
    <inlineHelpText>Notices required for this type of Fund Lineup Change</inlineHelpText>
    <label>Notices Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blackout</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>QDIA</fullName>
            </value>
            <value>
                <fullName>QDIA and Blackout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>