force-app/main/default/objects/Fund_Lineup_Change__c/fields/Old_To_New__c.field-meta.xml
<CustomField>
    <fullName>Old_To_New__c</fullName>
    <formula>TEXT(Previous_Fund_List__c) &amp; &quot; to &quot; &amp; TEXT(New_Fund_List__c)</formula>
    <label>Old to New</label>
    <type>Text</type>
</CustomField>