force-app/main/default/objects/Fund_Lineup_Change__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plan on which Fund Lineup is being changed</description>
    <inlineHelpText>Plan on which Fund Lineup is being changed</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Fund Lineup Changes</relationshipLabel>
    <relationshipName>Fund_Lineup_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>