force-app/main/default/objects/Fund_Lineup_Change__c/fields/Previous_Fund_List__c.field-meta.xml
<CustomField>
    <fullName>Previous_Fund_List__c</fullName>
    <label>Previous Fund List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>DFA Turnkey list</fullName>
            </value>
            <value>
                <fullName>Globalt I Shares</fullName>
            </value>
            <value>
                <fullName>Intuit Morningstar</fullName>
            </value>
            <value>
                <fullName>Loring Ward</fullName>
            </value>
            <value>
                <fullName>Morningstar 25 bps</fullName>
            </value>
            <value>
                <fullName>Morningstar 50 bps</fullName>
            </value>
            <value>
                <fullName>Morningstar ETF</fullName>
            </value>
            <value>
                <fullName>Morningstar Managed</fullName>
            </value>
            <value>
                <fullName>Morningstar Schwab</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Principal Investment Portfolio</fullName>
            </value>
            <value>
                <fullName>Prudent DFA</fullName>
            </value>
            <value>
                <fullName>Prudent DFA Sustainable</fullName>
            </value>
            <value>
                <fullName>Schwab RIA Direct</fullName>
            </value>
            <value>
                <fullName>T. Rowe Price</fullName>
            </value>
            <value>
                <fullName>Vanguard Admiral</fullName>
            </value>
            <value>
                <fullName>Vanguard Long List</fullName>
            </value>
            <value>
                <fullName>Zenefits Vanguard List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>