force-app/main/default/objects/Fund_Lineup_Change__c/fields/QDIA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QDIA_End_Date__c</fullName>
    <description>End date for QDIA Notice distribution</description>
    <inlineHelpText>End date for QDIA Notice distribution</inlineHelpText>
    <label>QDIA End Date</label>
    <type>Date</type>
</CustomField>