force-app/main/default/objects/Fund_Lineup_Change__c/fields/QDIA_Participant_Notice_Needed__c.field-meta.xml
<CustomField>
    <fullName>QDIA_Participant_Notice_Needed__c</fullName>
    <description>Does a QDIA notice need to be distributed to Plan Participants by the Plan Sponsor?</description>
    <inlineHelpText>Does a QDIA notice need to be distributed to Plan Participants by the Plan Sponsor?</inlineHelpText>
    <label>QDIA Participant Notice Needed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fund_Lineup_Change__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>