force-app/main/default/objects/Fund_Lineup_Change__c/fields/QDIA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QDIA_Start_Date__c</fullName>
    <description>Start date for QDIA Notice distribution</description>
    <inlineHelpText>Start date for QDIA Notice distribution</inlineHelpText>
    <label>QDIA Start Date</label>
    <type>Date</type>
</CustomField>