force-app/main/default/objects/Fund_Lineup_Change__c/fields/Quarterly_Fees__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Fees__c</fullName>
    <description>Quarterly Fees charged for Fund Lineup.</description>
    <inlineHelpText>Quarterly Fees charged for Fund Lineup.</inlineHelpText>
    <label>Quarterly Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>