force-app/main/default/objects/Fund_Lineup_Change__c/fields/Sponsor_Instructions_Sent__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Instructions_Sent__c</fullName>
    <description>Date Plan Sponsor is sent instructions for fund change notice to be distributed to Plan Participants</description>
    <inlineHelpText>Date Plan Sponsor is sent instructions for fund change notice to be distributed to Plan Participants</inlineHelpText>
    <label>Sponsor Instructions Sent</label>
    <type>Date</type>
</CustomField>