force-app/main/default/objects/Fund_Lineup_Change__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <description>Primary team member overseeing the Fund Lineup Change Request</description>
    <inlineHelpText>Primary team member overseeing the Fund Lineup Change Request</inlineHelpText>
    <label>Team Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Victoria Gonzalez</fullName>
            </value>
            <value>
                <fullName>Jason Gross</fullName>
            </value>
            <value>
                <fullName>Robby Forsythe</fullName>
            </value>
            <value>
                <fullName>Brian Albiar</fullName>
            </value>
            <value>
                <fullName>Linnae LaCore</fullName>
            </value>
            <value>
                <fullName>Amanda Cameron</fullName>
            </value>
            <value>
                <fullName>Christie-Jo Starvish</fullName>
                <isActive>false</isActive>
                <label>Christie-Jo Starvish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>