force-app/main/default/objects/Fund_Lineup_Change__c/fields/Upfront_Fees__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Fees__c</fullName>
    <description>One time fees charged upfront.</description>
    <inlineHelpText>One time fees charged upfront.</inlineHelpText>
    <label>Upfront Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>