force-app/main/default/objects/Fund_Lineup_Change__c/validationRules/Blackout_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Blackout_Details</fullName>
    <active>true</active>
    <description>Requires QDIA Related field if QDIA Notice is needed</description>
    <errorConditionFormula>( ISPICKVAL( Notices_Required__c , &quot;Blackout&quot;)
|| 
 ISPICKVAL( Notices_Required__c , &quot;QDIA and Blackout&quot;)
)
&amp;&amp;
(
 ISBLANK(TEXT(  Blackout_Notice_Needed__c  )) 
||
 ISBLANK(TEXT(  Blackout_Noticed_Received__c  )) 
||
 ISBLANK(TEXT(  Blackout_Start_Date__c  )) 
||
 ISBLANK(TEXT(  Blackout_End_Date__c  )) 
)
&amp;&amp;
(ISNEW())</errorConditionFormula>
    <errorMessage>All fields in Blackout Notice Information section are required.</errorMessage>
</ValidationRule>