force-app/main/default/objects/Fund_Lineup_Change__c/validationRules/Custom_Fund_List.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_Fund_List</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(  New_Fund_List__c  , &quot;Custom&quot;)
&amp;&amp;
NOT(  Custom_List_Attached__c  )
&amp;&amp;
NOT(ISNEW())</errorConditionFormula>
    <errorDisplayField>Custom_List_Attached__c</errorDisplayField>
    <errorMessage>For Custom Fund List, ensure custom list is attached in the &quot;Files&quot; section at top of and check the &quot;Fund Mapping Attached&quot; box.</errorMessage>
</ValidationRule>