force-app/main/default/objects/Fund_Lineup_Change__c/validationRules/Default_Investment.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Investment</fullName>
    <active>true</active>
    <description>Default Investment ticker required</description>
    <errorConditionFormula>ISBLANK(  Default_Investment__c )
&amp;&amp;
 (ISNEW())</errorConditionFormula>
    <errorDisplayField>Default_Investment__c</errorDisplayField>
    <errorMessage>Enter the default investment for forfeitures to continue</errorMessage>
</ValidationRule>