force-app/main/default/objects/Fund_Lineup_Change__c/validationRules/Mapping_Instructions.validationRule-meta.xml
<ValidationRule>
    <fullName>Mapping_Instructions</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Are_Funds_Being_Deleted__c , &quot;Yes&quot;)
&amp;&amp;
NOT( Fund_Mapping_Attached__c )
&amp;&amp;
NOT(ISNEW())</errorConditionFormula>
    <errorDisplayField>Fund_Mapping_Attached__c</errorDisplayField>
    <errorMessage>If funds are being deleted, ensure mapping instruction file is attached and check the &quot;Fund Mapping Attached&quot; box.</errorMessage>
</ValidationRule>