force-app/main/default/objects/Fund_Lineup_Change__c/validationRules/QDIA_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>QDIA_Details</fullName>
    <active>true</active>
    <description>Requires QDIA Related field if QDIA Notice is needed</description>
    <errorConditionFormula>( ISPICKVAL( Notices_Required__c , &quot;QDIA&quot;)
|| 
 ISPICKVAL( Notices_Required__c , &quot;QDIA and Blackout&quot;)
)
&amp;&amp;
(
 ISBLANK(TEXT( QDIA_Participant_Notice_Needed__c )) 
||
 ISBLANK(TEXT( Sponsor_Instructions_Sent__c )) 
||
 ISBLANK(TEXT( QDIA_Start_Date__c )) 
||
 ISBLANK(TEXT( QDIA_End_Date__c )) 
)
&amp;&amp;
(ISNEW())</errorConditionFormula>
    <errorMessage>All fields in QDIA Notice Information section are required.</errorMessage>
</ValidationRule>