force-app/main/default/objects/Fund_Lineup_Change__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Requested__c</columns>
    <columns>Fund_Lineup_Change__c</columns>
    <columns>Fund_Lineup_Change_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>