force-app/main/default/objects/Fund_Lineup_Change__c/listViews/Blackout_Dates_This_Week.listView-meta.xml
<ListView>
    <fullName>Blackout_Dates_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Blackout_Start_Date__c</columns>
    <columns>Blackout_End_Date__c</columns>
    <columns>In_Blackout__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Blackout_Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Blackout Dates This Week</label>
</ListView>